@@ -1,3 +1,12 @@
+2011-09-15  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	* include/std/tuple (make_tuple, forward_as_tuple): Declare constexpr.
+	(_Tuple_impl<>::_Tuple_impl(_Tuple_impl<>&&)): Likewise.
+	* testsuite/20_util/tuple/creation_functions/constexpr.cc: Enable
+	make_tuple test.
+	* testsuite/20_util/weak_ptr/comparison/cmp_neg.cc: Adjust dg-warning
+	line number.
+
 2011-09-14  François Dumont  <fdumont@gcc.gnu.org>
 	    Paolo Carlini  <paolo.carlini@oracle.com>
 
@@ -13,7 +22,7 @@
 	Likewise.
 
 2011-09-13  Paul Brook  <paul@codesourcery.com>
- 
+
 	* libsupc++/eh_arm.cc (__cxa_end_cleanup): Add C6X implementation.
 	* libsupc++/eh_call.cc (__cxa_call_unexpected): Set rtti_base.
 	* libsupc++/eh_personality.cc (NO_SIZE_OF_ENCODED_VALUE): Remove
